# Gra

./: .project  CMakeLists.txt  Makefile  README.md  plik.txt
output/: main  plik.txt
src/: Game.cpp  Game.d  Game.h  LogicGame.cpp  LogicGame.d  LogicGame.h  Lottery.cpp  Lottery.d  Lottery.h  main.cpp  main.d
tests/: Test_Lottery.cpp
